--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -56,7 +56,7 @@
 
             <tr>
               <td><%= f.submit "編集内容を保存", class: 'btn btn-success' %></td>
-              <td><%= link_to "退会する",  unsubscribe_path %></td>
+              <td><%= link_to "退会する", public_unsubscribe_path %></td>
             </tr>
             </table>
         <% end %>
