--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,8 +38,11 @@
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %>
           </li>
         <% else %>
-          <li class="mr-3">
-            <%= link_to "About", public_about_path,class: 'nav-link text-light' %>
+          <!--<li class="mr-3">-->
+          <!--  <%=# link_to "About", public_about_path,class: 'nav-link text-light' %>-->
+          <!--</li>-->
+           <li class="mr-3">
+          <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, class: "nav-link text-light", method: :post %>
           </li>
           <li class="mr-3">
             <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
