--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center">
     <h2>ショッピングカート</h2>
-    <%= link_to 'カートを空にする', destroy_all_path, method: :delete,
+    <%= link_to 'カートを空にする', public_destroy_all_path, method: :delete,
     "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger h-75" %>
   </div>
   <table class="table table-bordered table-hover mt-3">
