--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -8,8 +8,8 @@
             退会する場合は、「退会する」をクリックしてください。
         </p>
 
-        <%= link_to "退会しない", customer_path%>
-        <%= link_to "退会する", withdrawal_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
+        <%= link_to "退会しない", public_customer_path(current_customer) %>
+        <%= link_to "退会する", withdraw_public_customers_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
     </div>
   </div>
 </div>
