--- a/app/views/admin/concerts/edit.html.erb
+++ b/app/views/admin/concerts/edit.html.erb
@@ -3,9 +3,9 @@
     <div class="col-md-10 col-sm-12 mx-6 mx-sm-auto px-auto">
       <div class="row d-flex justify-content-center mb-4">
 
-        <h3 class="col-6"><span>コンサート情報編集</span></h3>
+        <h3 class="col-6"><span>コンサート編集</span></h3>
 
-        <%= form_with model: @concert, url: public_concert_path(@concert.id), method: :patch, local:true, class: "container text-center pl-9" do |f| %>
+        <%= form_with model: @concert, url: admin_concert_path(@concert.id), method: :patch, local:true, class: "container text-center pl-9" do |f| %>
         <div class="form-group row">
           <label class="col-4 text-right">コンサート画像</label>
           <%= f.file_field :image, class: "col-4 form-control-file pl-0", accept: "image/*" %>
@@ -31,7 +31,7 @@
           <%= f.radio_button :is_active, :true %>
           <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
           <%= f.radio_button :is_active, :false %>
-          <%= f.label :is_active, "受付終了", value: "false" %>
+          <%= f.label :is_active, "販売停止中", value: "false" %>
         </div>
         <div class="form-group text-center mt-5">
           <%= f.submit "変更を保存", class: "btn btn-success btn-lg" %>
