--- a/app/views/admin/concerts/new.html.erb
+++ b/app/views/admin/concerts/new.html.erb
@@ -3,12 +3,12 @@
     <div class="col-md-10 col-sm-12 mx-6 mx-sm-auto px-auto">
         <h3 class="mb-5 col-8 d-flex justify-content-center"><span>コンサート新規登録</span></h3>
 
-                <%= form_with model: @concert, url: public_concerts_path, method: :post, local:true do |f| %>
+                <%= form_with model: @concert, url: admin_concerts_path, method: :post, local:true do |f| %>
                 <% if @concert.errors.any? %>
                   <div id="error_explanation">
                     <h3><%= pluralize(@concert.errors.count, "error") %> prohibited this obj from being saved:</h3>
                     <ul>
-                      <% @concert.errors.full_messages.each do |concert| %>
+                      <% @concert.errors.full_messages.each do |message| %>
                         <li><%= message %></li>
                       <% end %>
                     </ul>
@@ -16,7 +16,7 @@
                 <% end %>
           <div class="w-50 mx-auto">
               <dl class="row">
-                <dt class="col-4"><%= f.label :image, "コンサートイメージ画像", class: "text-right" %></dt>
+                <dt class="col-4"><%= f.label :image, "コンサート画像", class: "text-right" %></dt>
                 <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :name, "コンサート名", class: "text-right" %></dt>
@@ -37,7 +37,7 @@
                   <%= f.radio_button :is_active, :true %>
                   <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
                   <%= f.radio_button :is_active, :false %>
-                  <%= f.label :is_active, "受付終了", value: "false" %>
+                  <%= f.label :is_active, "販売停止中", value: "false" %>
                 </dd>
               </dl>
           </div>
