--- a/app/views/admin/revues/index.html.erb
+++ b/app/views/admin/revues/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Revues#index</h1>
-<p>Find me in app/views/admin/revues/index.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-10">
+      <h3><span class="bg-light bg-gradient">レビュー一覧</span></h3>
+    </div>
+            <table class='table table-hover table-inverse'>
+              <thead>
+                <tr class="bg-light">
+                    <th>コンサートID</th>
+                    <th>コンサート名</th>
+                    <th>税抜価格</th>
+                    <th>カテゴリー</th>
+                    <th>ステータス</th>
+                    <th>レビュー</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% @concert.each do |concert| %>
+                  <tr>
+                      <td><%= concert.id %></td>
+                      <td><%= link_to concert.name, admin_concert_path(concert.id)%></td>
+                      <td><%= concert.price %></td>
+                      <td><%= concert.category.name %></td>
+                      <td>
+                      <%if concert.is_active == true %>
+                        <strong class="text-success">販売中</strong>
+                        <% else %>
+                        <strong class="text-muted">受付終了</strong>
+                        <% end %>
+                        </td>
+                  </tr>
+                      <% end %>
+                </tbody>
+            </table>
+            <%= paginate @concert %>
+        </div>
+    </div>
+</div>
