--- a/app/views/admin/revues/show.html.erb
+++ b/app/views/admin/revues/show.html.erb
@@ -2,40 +2,31 @@
   <div class="low">
     <div class="review_title">レビュー詳細</div>
     <div class="col-xs-3">
-      <%= render 'users/info', user: @user %>
+      <%= render 'public/customers/info', customer: @customer %>
     </div>
     <div class="col-xs-8 col-xs-offset-1">
       <table class="table table-hover table-inverse">
         <div class="col-xs-4">
         <tr>
-          <td class="info">本のタイトル</td>
-          <td><%= @review.book.name %></td>
+          <td class="info">コンサートのタイトル</td>
+          <td><%= @revues.concert.name %></td>
         </tr>
         </div>
         <tr>
           <td class="info">レビュータイトル</td>
-          <td><%= @review.title %></td>
+          <td><%= @revues.title %></td>
         </tr>
       </table>
       <h4>レビュー本文</h4>
       <div>
-        <%= @review.text %>
+        <%= @revues.text %>
       </div>
     </div>
   </div>
   <div class="low">
-    <div class="col-xs-12">
       <div class="col-xs-1 col-xs-offset-4">
-        <%= link_to "本の詳細に戻る", book_path(@book),class: "btn btn-primary btn-sm" %>
-      </div>
-      <div class="col-xs-1 col-xs-offset-1">
-        <% if @review.user_id == current_user.id %>
-        <%= link_to "編集", edit_book_review_path(@book, @review),class: "btn btn-primary btn-sm" %>
-        <% end %>
-      </div>
-      <div class="col-xs-1 col-xs-offset-4">
-        <% if @review.user_id == current_user.id %>
-        <%= link_to "削除", book_review_path(@book), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger btn-sm" %>
+        <% if @revues.customer_id == current_customer.id %>
+        <%= link_to "削除", admin_concert_revues_path(@concert), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger btn-sm" %>
         <% end %>
       </div>
     </div>
