--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -15,6 +15,7 @@
                     <th>税抜価格</th>
                     <th>カテゴリー</th>
                     <th>ステータス</th>
+                    <th>コメント一覧</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,6 +32,7 @@
                         <strong class="text-muted">受付終了</strong>
                         <% end %>
                         </td>
+                      <td><%= link_to "コメント", admin_concert_comments_path(concert)%></td>
                   </tr>
                       <% end %>
                 </tbody>
