--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -1,14 +1,33 @@
-      <div>
-       <p>コメント件数：<%= @revue.comments.count %></p>
+<div class="container my-5">
+   <div class="row">
+     <div class="col-10">
+      <h3><span class="bg-light bg-gradient">コメント一覧</span></h3>
+    </div>
+    <table class='table table-hover table-inverse'>
+      <thead>
+        <tr class="bg-light">
+          <th>名前</th>
+          <th>記入日</th>
+          <th>コメント</th>
+        </tr>
+      </thead>
+      <tbody>
         <% @revue.comments.each do |comment| %>
         <%# image_tag comment.user.get_profile_image(100,100) %>
-         <%= comment.customer.first_name %>
-         <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+        <tr>
+         <td><%= comment.customer.first_name %></td>
+         <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
+         <td><%= comment.comment %></td>
+        </tr>
         <% end %>
       </div>
       <div>
        <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post do |f| %>
-        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "w-100" %>
         <%= f.submit "送信する" %>
        <% end %>
-      </div>
+       <p>コメント件数：<%= @revue.comments.count %></p>
+     </table>
+     </div>
+   </div>
+ </div>
