--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -35,18 +35,26 @@
 </div>
 
 <%# レビュー一覧表示%>
-<div class="col-xs-7">
- <div class="concert_show_title">レビュー一覧</div>
-  <div class="concert_show">
-  <table class="table table-hover table-inverse">
-    <thead>
-      <tr class="info">
-        <th>ユーザー</th>
-        <th>レビュー</th>
-        <th>コメント</th>
-      </tr>
-    </thead>
-    <tbody>
+<div class="container my-5">
+   <div class="row">
+     <div class="col-10">
+       <div>
+         <%= form_with model: [@concert, @revue], url: public_concert_revues_path(@concert.id), method: :post do |f| %>
+          <%= f.text_area :impressions, rows: '5', placeholder: "レビューをここに" %>
+          <%= f.submit "送信する" %>
+         <% end %>
+      </div>
+      <h3><span class="bg-light bg-gradient">レビュー一覧</span></h3>
+     </div>
+<table class='table table-hover table-inverse'>
+ <thead>
+  <tr class="bg-light">
+   <th>ユーザー</th>
+   <th>レビュー</th>
+   <th>コメント</th>
+  </tr>
+</thead>
+   <tbody>
       <% @revues.each do |r| %>
       <tr>
         <td>
@@ -64,12 +72,6 @@
       <% end %>
     </tbody>
   </table>
-  <div>
-  <%= form_with model: [@concert, @revue], url: public_concert_revues_path(@concert.id), method: :post do |f| %>
-    <%= f.text_area :impressions, rows: '5', placeholder: "レビューをここに" %>
-    <%= f.submit "送信する" %>
-  <% end %>
-</div>
   </div>
   <div class ="paginate">
     <%= paginate @revues %>
@@ -77,3 +79,4 @@
  </div>
 </div>
 <%# レビュー一覧表示%>
+
