--- a/app/views/admin/home/top.html.erb
+++ b/app/views/admin/home/top.html.erb
@@ -22,7 +22,7 @@
                   <% end %>
                 </td>
                 <td><%= order.customer.add_full_name %></td>
-                <td><%= order.order_details.sum(:amount) %></td>
+                <td><%= order.order_details.sum(:sheet) %></td>
                 <td><%= order.status_i18n %></td>
               </tr>
             <% end %>
